# FileReaderDesign

./: CMakeLists.txt  README.md
src/: Helper.cpp  Helper.h  main.cpp
src/AESCryption/: AES.cpp  AES.h
src/Common/: CommonFiles.cpp  CommonFiles.h
src/Compression/: BoostHeaders.h  Bzip2Compression.cpp  Bzip2Compression.h  GzipCompression.cpp  GzipCompression.h
src/EnumList/: CompressionList.cpp  CompressionList.h  EncryptionList.cpp  EncryptionList.h  encryptListConf.xml
src/Handlers/: FileHandler.cpp  FileHandler.h
src/Logging/: AppLog.cpp  AppLog.h
